Addresses pr feedback